--- a/bible-readings.html
+++ b/bible-readings.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Bible Readings</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=368304127"/>
-  <link rel="stylesheet" type="text/css" href="css/bible-readings.css?crc=368160431" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4108129033"/>
+  <link rel="stylesheet" type="text/css" href="css/bible-readings.css?crc=4256360581" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/HlwCOeUfbgZEXIzp_K_bRjmpimAqNAKanXghH47FnV3feCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfFczMsMMeMb6MqGIQWmDZZMg7HRr3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/Ic6WJGjYd-ZU0JcSFMJ5Axro39T-83081mMYcMu55_qfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfFczMsMMeMb6MqGIQWmDZZMg7lEQ369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -58,7 +58,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
        <div class="clearfix grpelem" id="pu22548-4"><!-- column -->
-        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermoncoming-soon.html" data-href="page:U35374"><!-- content --><p id="u22548-2">SERMONS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
@@ -73,24 +73,23 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
    <div class="clearfix grpelem" id="u7247"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U7250-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="clearfix colelem" id="u7250-27" data-muse-uid="U7250" data-muse-type="txt_frame"><!-- content -->
-     <p id="u7250-2">8To conclude: you must all have the same attitude and the same feelings; love one another as brothers and sisters, and be kind and humble with one another. 9Do not pay back evil with evil or cursing with cursing; instead, pay back with a blessing, because a blessing is what God promised to give you when he called you. 10As the scripture says:</p>
-     <p id="u7250-4">“Whoever wants to enjoy life</p>
-     <p id="u7250-6">and wishes to see good times,</p>
-     <p id="u7250-8">must keep from speaking evil</p>
-     <p id="u7250-10">and stop telling lies.</p>
-     <p id="u7250-12">11They must turn away from evil and do good;</p>
-     <p id="u7250-14">they must strive for peace with all their heart.</p>
-     <p id="u7250-16">12For the Lord watches over the righteous</p>
-     <p id="u7250-18">and listens to their prayers;</p>
-     <p id="u7250-20">but he opposes those who do evil.”</p>
-     <p id="u7250-22">13Who will harm you if you are eager to do what is good? 14But even if you should suffer for doing what is right, how happy you are! Do not be afraid of anyone, and do not worry. 15But have reverence for Christ in your hearts, and honour him as Lord. Be ready at all times to answer anyone who asks you to explain the hope you have in you, 16but do it with gentleness and respect. Keep your conscience clear, so that when you are insulted, those who speak evil of your good conduct as followers of Christ will be ashamed of what they say. 17For it is better to suffer for doing good, if this should be God's will, than for doing evil. 18For Christ died for sins once and for all, a good man on behalf of sinners, in order to lead you to God. He was put to death physically, but made alive spiritually, 19and in his spiritual existence he went and preached to the imprisoned spirits. 20These were the spirits of those who had not obeyed God when he waited patiently during the days that Noah was building his boat. The few people in the boat — eight in all — were saved by the water, 21which was a symbol pointing to baptism, which now saves you. It is not the washing away of bodily dirt, but the promise made to God from a good conscience. It saves you through the resurrection of Jesus Christ, 22who has gone to heaven and is at the right-hand side of God, ruling over all angels and heavenly authorities and powers.</p>
-     <p id="u7250-23">&nbsp;</p>
-     <p id="u7250-25">1 Peter 3:8-22</p>
+    <div class="clearfix colelem" id="u7250-25" data-muse-uid="U7250" data-muse-type="txt_frame"><!-- content -->
+     <p id="u7250-2">1Jesus was born in the town of Bethlehem in Judea, during the time when Herod was king. Soon afterward, some men who studied the stars came from the East to Jerusalem 2and asked, “Where is the baby born to be the king of the Jews? We saw his star when it came up in the east, and we have come to worship him.”</p>
+     <p id="u7250-4">3When King Herod heard about this, he was very upset, and so was everyone else in Jerusalem. 4He called together all the chief priests and the teachers of the Law and asked them, “Where will the Messiah be born?”</p>
+     <p id="u7250-6">5“In the town of Bethlehem in Judea,” they answered. “For this is what the prophet wrote:</p>
+     <p id="u7250-8">6&nbsp;&nbsp; ‘Bethlehem in the land of Judah,</p>
+     <p id="u7250-10">you are by no means the least of the leading cities of Judah;</p>
+     <p id="u7250-12">for from you will come a leader</p>
+     <p id="u7250-14">who will guide my people Israel.’”</p>
+     <p id="u7250-16">7So Herod called the visitors from the East to a secret meeting and found out from them the exact time the star had appeared. 8Then he sent them to Bethlehem with these instructions: “Go and make a careful search for the child; and when you find him, let me know, so that I too may go and worship him.”</p>
+     <p id="u7250-18">9-10And so they left, and on their way they saw the same star they had seen in the East. When they saw it, how happy they were, what joy was theirs! It went ahead of them until it stopped over the place where the child was. 11They went into the house, and when they saw the child with his mother Mary, they knelt down and worshiped him. They brought out their gifts of gold, frankincense, and myrrh, and presented them to him.</p>
+     <p id="u7250-20">12Then they returned to their country by another road, since God had warned them in a dream not to go back to Herod.</p>
+     <p id="u7250-21">&nbsp;</p>
+     <p id="u7250-23">Matthew 2:1-12</p>
     </div>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U7248-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix colelem" id="u7248-4" href="https://www.bible.com/bible/68/1pe.3" data-muse-uid="U7248" data-muse-type="txt_frame"><!-- content --><p><span id="u7248">View online</span></p></a>
+    <a class="nonblock nontext clearfix colelem" id="u7248-4" href="https://www.bible.com/bible/68/mat.2" data-muse-uid="U7248" data-muse-type="txt_frame"><!-- content --><p><span id="u7248">View online</span></p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U7249-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext clearfix colelem" id="u7249-4" href="last-weeks-br.html" data-href="page:U6228" data-muse-uid="U7249" data-muse-type="txt_frame"><!-- content --><p><span id="u7249">Last weeks passage</span></p></a>
@@ -105,12 +104,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pu7251-4"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U7251-BP_infinity" template="bible-readings.html" data-type="html" data-ice-options="disableImageResize,link" -->
     <div class="Title clearfix colelem" id="u7251-4" data-muse-uid="U7251" data-muse-type="txt_frame"><!-- content -->
-     <h1>Bible Readings</h1>
+     <h1>BIBLE READINGS</h1>
     </div>
     <!-- /m_editable -->
     <div class="colelem" id="u6188"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="602" data-content-above-spacer="602" data-content-below-spacer="81"></div>
+   <div class="verticalspacer" data-offset-top="517" data-content-above-spacer="517" data-content-below-spacer="81"></div>
    <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
