--- a/discipleship.html
+++ b/discipleship.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Discipleship</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=368304127"/>
-  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=334082573" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4108129033"/>
+  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=4081981489" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/5qky1sJNbTkVJPG1qbCc7GRaIOi26EFQxIgfwD8rrVJfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgG7Rr3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/WTGvWqFUVJtPG9wePwxqnmmhaKDITn5vZQkpUeEsgN6feCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgGiEQ369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -58,7 +58,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <a class="nonblock nontext clearfix grpelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
        <div class="clearfix grpelem" id="pu22548-4"><!-- column -->
-        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermoncoming-soon.html" data-href="page:U35374"><!-- content --><p id="u22548-2">SERMONS</p></a>
         <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
@@ -71,7 +71,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pu29211"><!-- column -->
+   <div class="clearfix grpelem" id="u35200"><!-- column -->
     <div class="clearfix colelem" id="u29211"><!-- column -->
      <!-- m_editable region-id="editable-static-tag-U17949-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u17949-7" href="abcd.html" data-href="page:U18803" data-muse-uid="U17949" data-muse-type="txt_frame"><!-- content --><p id="u17949-5"><span id="u17949">ABCD of Following Jesus</span><span id="u17949-3"><br/></span><span id="u17949-4">The ABCD of following Jesus is designed to help people quickly pick up what it means to be a disciple of Christ. There are many other aspects following Jesus that come with time and knowledge but these are 4 basic elements that will stimulate consistent growth in Christ.</span></p></a>
@@ -96,15 +96,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <!-- m_editable region-id="editable-static-tag-U18013-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u18013-10" href="bible-questions.html" data-href="page:U18781" data-muse-uid="U18013" data-muse-type="txt_frame"><!-- content --><p id="u18013-8"><span id="u18013">Bible Questions</span><span id="u18013-3"><br/></span><span id="u18013-7">Tools to go deeper in our bible reading.<br/>Tools to go deeper in our bible reading.</span></p></a>
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u18013-7" href="going-deeper.html" data-href="page:U18781" data-muse-uid="U18013" data-muse-type="txt_frame"><!-- content --><p id="u18013-5"><span id="u18013">Going Deeper with Scripture</span><span id="u18013-3"><br/></span><span id="u18013-4">There are many tools to help us to gain a deeper understanding of the Bible passages we read. The following is just one of these methods. Although written for the context of a small group study, they can be easily adapted for personal reading.</span></p></a>
     <!-- /m_editable -->
-   </div>
-   <div class="clearfix grpelem" id="pu18022-10"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U18022-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u18022-10" href="abcd.html" data-href="page:U18803" data-muse-uid="U18022" data-muse-type="txt_frame"><!-- content --><p id="u18022-8"><span id="u18022-3">evangelism questions<br/></span><span id="u18022-7">Tools to go deeper in our conversations.<br/>Tools to go deeper in our conversations.</span></p></a>
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u18022-7" href="evangelism.html" data-href="page:U18494" data-muse-uid="U18022" data-muse-type="txt_frame"><!-- content --><p id="u18022-5"><span id="u18022-3">Evangelistic Conversations<br/></span><span id="u18022-4">Scripture says that we are called to share our faith and make disciples, but having these type of conversations with people can be difficult. The following is a helpful resources that will take you through a pathway of questions to ask to encourage such conversations.</span></p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U18031-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u18031-10" href="tithing.html" data-href="page:U18825" data-muse-uid="U18031" data-muse-type="txt_frame"><!-- content --><p id="u18031-8"><span id="u18031-3">Tithing<br/></span><span id="u18031-7">What Does this even means<br/>How can I tithe?</span></p></a>
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u18031-7" href="tithing.html" data-href="page:U18825" data-muse-uid="U18031" data-muse-type="txt_frame"><!-- content --><p id="u18031-5"><span id="u18031-3">Tithing<br/></span><span id="u18031-4">Tithing is often mentioned in church as a spiritual discipline or practice, but what does this actually mean? Including how to tithe electronically.</span></p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U31570-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u31570-4" href="resources.html" data-href="page:U31596" data-muse-uid="U31570" data-muse-type="txt_frame"><!-- content --><p id="u31570-2"><span id="u31570">Other Helpful Resources</span></p></a>
@@ -119,7 +117,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="colelem" id="u6188"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="1376" data-content-above-spacer="1375" data-content-below-spacer="80"></div>
+   <div class="verticalspacer" data-offset-top="1380" data-content-above-spacer="1379" data-content-below-spacer="80"></div>
    <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
