--- a/evangelism.html
+++ b/evangelism.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Evangelism</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=368304127"/>
-  <link rel="stylesheet" type="text/css" href="css/evangelism.css?crc=4209034831" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4108129033"/>
+  <link rel="stylesheet" type="text/css" href="css/evangelism.css?crc=509788180" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/GznfyA56p9cV0mJ1sm3ytEwA15AVG8VJOuWNi-jqWNbfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMg7-Rr3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/US2ArvsVpNK0GDDuAt2nFYFsrUEFJzMLy-a_YM0LONMfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgnlEQ369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -58,7 +58,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <a class="nonblock nontext clearfix grpelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
        <div class="clearfix grpelem" id="pu22548-4"><!-- column -->
-        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermoncoming-soon.html" data-href="page:U35374"><!-- content --><p id="u22548-2">SERMONS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
@@ -74,12 +74,114 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pu18757-4"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U18757-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
     <div class="Title clearfix colelem" id="u18757-4" data-muse-uid="U18757" data-muse-type="txt_frame"><!-- content -->
-     <h1>EVANGELISM</h1>
+     <h1>CONVERSATIONS</h1>
     </div>
     <!-- /m_editable -->
     <div class="colelem" id="u6188"><!-- simple frame --></div>
+    <!-- m_editable region-id="editable-static-tag-U35844-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u35844-5" data-muse-uid="U35844" data-muse-type="txt_frame"><!-- content -->
+     <p id="u35844-2">Core Vision</p>
+     <p id="u35844-3">&nbsp;</p>
+    </div>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U35854-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u35854-4" href="abcd.html" data-href="page:U18803" data-muse-uid="U35854" data-muse-type="txt_frame"><!-- content --><p id="u35854-2"><span id="u35854">So, what about you? Have you had any experience with Christian stuff before?</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U35849-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u35849-4" data-muse-uid="U35849" data-muse-type="txt_frame"><!-- content -->
+     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="clip_frame colelem" id="u35934"><!-- svg -->
+     <img class="svg" id="u35932" src="images/pasted-svg-11824x7.svg?crc=348884458" width="42" height="25" alt="" data-mu-svgfallback="images/pasted%20svg%2011824x7_poster_.png?crc=395369332"/>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U35855-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u35855-4" href="going-deeper.html" data-href="page:U18781" data-muse-uid="U35855" data-muse-type="txt_frame"><!-- content --><p id="u35855-2"><span id="u35855">So, was that a positive or negative experience for you?</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U35846-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u35846-4" data-muse-uid="U35846" data-muse-type="txt_frame"><!-- content -->
+     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="clip_frame colelem" id="u36177"><!-- svg -->
+     <img class="svg" id="u36178" src="images/pasted-svg-11824x7.svg?crc=348884458" width="42" height="25" alt="" data-mu-svgfallback="images/pasted%20svg%2011824x7_poster_.png?crc=395369332"/>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U35848-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u35848-4" href="abcd.html" data-href="page:U18803" data-muse-uid="U35848" data-muse-type="txt_frame"><!-- content --><p id="u35848-2"><span id="u35848">Can you tell me what happened?</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U35851-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u35851-4" data-muse-uid="U35851" data-muse-type="txt_frame"><!-- content -->
+     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="clip_frame colelem" id="u36186"><!-- svg -->
+     <img class="svg" id="u36187" src="images/pasted-svg-11824x7.svg?crc=348884458" width="42" height="25" alt="" data-mu-svgfallback="images/pasted%20svg%2011824x7_poster_.png?crc=395369332"/>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U35847-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u35847-4" href="tithing.html" data-href="page:U18825" data-muse-uid="U35847" data-muse-type="txt_frame"><!-- content --><p id="u35847-2"><span id="u35847">So where does that leave you up to with God and how you think of Him?</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U35853-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u35853-4" data-muse-uid="U35853" data-muse-type="txt_frame"><!-- content -->
+     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="clip_frame colelem" id="u36351"><!-- svg -->
+     <img class="svg" id="u36352" src="images/pasted-svg-11824x7.svg?crc=348884458" width="42" height="25" alt="" data-mu-svgfallback="images/pasted%20svg%2011824x7_poster_.png?crc=395369332"/>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U35852-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u35852-4" href="resources.html" data-href="page:U31596" data-muse-uid="U35852" data-muse-type="txt_frame"><!-- content --><p id="u35852-2"><span id="u35852">What do you mean by that?</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U35845-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u35845-4" data-muse-uid="U35845" data-muse-type="txt_frame"><!-- content -->
+     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="clip_frame colelem" id="u36360"><!-- svg -->
+     <img class="svg" id="u36361" src="images/pasted-svg-11824x7.svg?crc=348884458" width="42" height="25" alt="" data-mu-svgfallback="images/pasted%20svg%2011824x7_poster_.png?crc=395369332"/>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U35850-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u35850-4" href="resources.html" data-href="page:U31596" data-muse-uid="U35850" data-muse-type="txt_frame"><!-- content --><p id="u35850-2"><span id="u35850">How did you come to that conclusion?</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U35843-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u35843-4" data-muse-uid="U35843" data-muse-type="txt_frame"><!-- content -->
+     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="clip_frame colelem" id="u36369"><!-- svg -->
+     <img class="svg" id="u36370" src="images/pasted-svg-11824x7.svg?crc=348884458" width="42" height="25" alt="" data-mu-svgfallback="images/pasted%20svg%2011824x7_poster_.png?crc=395369332"/>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U35890-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u35890-4" href="abcd.html" data-href="page:U18803" data-muse-uid="U35890" data-muse-type="txt_frame"><!-- content --><p id="u35890-2"><span id="u35890">Have you ever considered….</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U35888-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u35888-4" data-muse-uid="U35888" data-muse-type="txt_frame"><!-- content -->
+     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="clip_frame colelem" id="u36378"><!-- svg -->
+     <img class="svg" id="u36379" src="images/pasted-svg-11824x7.svg?crc=348884458" width="42" height="25" alt="" data-mu-svgfallback="images/pasted%20svg%2011824x7_poster_.png?crc=395369332"/>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U35887-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u35887-4" href="going-deeper.html" data-href="page:U18781" data-muse-uid="U35887" data-muse-type="txt_frame"><!-- content --><p id="u35887-2"><span id="u35887">If I were to answer this question to your satisfaction, what difference would it make in your life?</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U35891-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u35891-4" data-muse-uid="U35891" data-muse-type="txt_frame"><!-- content -->
+     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="clip_frame colelem" id="u36387"><!-- svg -->
+     <img class="svg" id="u36388" src="images/pasted-svg-11824x7.svg?crc=348884458" width="42" height="25" alt="" data-mu-svgfallback="images/pasted%20svg%2011824x7_poster_.png?crc=395369332"/>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U35894-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u35894-4" href="abcd.html" data-href="page:U18803" data-muse-uid="U35894" data-muse-type="txt_frame"><!-- content --><p id="u35894-2"><span id="u35894">I’m interested to know, have you ever come across the concept that you can know God personally – that is, have a friendship with God</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U35889-BP_infinity" template="evangelism.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u35889-4" data-muse-uid="U35889" data-muse-type="txt_frame"><!-- content -->
+     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim</p>
+    </div>
+    <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="77" data-content-above-spacer="88" data-content-below-spacer="81"></div>
+   <div class="verticalspacer" data-offset-top="1117" data-content-above-spacer="1116" data-content-below-spacer="80"></div>
    <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
