--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home Page</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3921222090" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=221415058" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -27,7 +27,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/TUs72I2XGWWpr6Kk7bNMLiLbIB3j-0x0K-u3yfq9pQwfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAukSku8jWZ8SkGHfwQpMsMMeMb6MqGIQWmDZZMg8-Rr3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/vuV3iTlzkauMskHR0iqvnG-Ih2hVQ0j4uIk8aKJC6uwfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAukSku8jWZ8SkGHfwQpMsMMeMb6MqGIQWmDZZMgRNEQ369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -82,7 +82,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <!-- /m_editable -->
         <div class="clearfix grpelem" id="pu24713-4"><!-- column -->
          <!-- m_editable region-id="editable-static-tag-U24713-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-         <a class="nonblock nontext clearfix colelem" id="u24713-4" href="sermon.html" data-href="page:U5450" data-muse-uid="U24713" data-muse-type="txt_frame"><!-- content --><p id="u24713-2">SERMONS</p></a>
+         <a class="nonblock nontext clearfix colelem" id="u24713-4" href="sermoncoming-soon.html" data-href="page:U35374" data-muse-uid="U24713" data-muse-type="txt_frame"><!-- content --><p id="u24713-2">SERMONS</p></a>
          <!-- /m_editable -->
          <!-- m_editable region-id="editable-static-tag-U24721-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
          <a class="nonblock nontext clearfix colelem" id="u24721-4" href="discipleship.html" data-href="page:U5578" data-muse-uid="U24721" data-muse-type="txt_frame"><!-- content --><p id="u24721-2">DISCIPLESHIP</p></a>
