--- a/sermoncoming-soon.html
+++ b/sermoncoming-soon.html
@@ -11,14 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "last-weeks-br.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "sermoncoming-soon.css"], "outOfDate":[]};
 </script>
   
-  <title>Last Weeks BR</title>
+  <title>Sermon/coming soon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4108129033"/>
-  <link rel="stylesheet" type="text/css" href="css/last-weeks-br.css?crc=4107930751" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/sermoncoming-soon.css?crc=4250805279" id="pagesheet"/>
+  <!-- IE-only CSS -->
+  <!--[if lt IE 9]>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=4200611759" id="nomq_pagesheet"/>
+  <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/qlPI-ubENh5hMyurkiAxmjpFkS6wDj5gJRIlL5-OeYtfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfFczMsMMeMb6MqGIQWmDZZMgTNEQ369.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/dlMNHwVqRuJHha_khIkvKbpTmO8t_zKWCknBdoOejJCfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgaFEQ369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -58,7 +62,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <a class="nonblock nontext clearfix grpelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
        <div class="clearfix grpelem" id="pu22548-4"><!-- column -->
-        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermoncoming-soon.html" data-href="page:U35374"><!-- content --><p id="u22548-2">SERMONS</p></a>
+        <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u22548-4" href="sermoncoming-soon.html" data-href="page:U35374"><!-- content --><p id="u22548-2">SERMONS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
@@ -71,46 +75,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="clearfix grpelem" id="u6589"><!-- column -->
-    <!-- m_editable region-id="editable-static-tag-U6197-BP_infinity" template="last-weeks-br.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="clearfix colelem" id="u6197-26" data-muse-uid="U6197" data-muse-type="txt_frame"><!-- content -->
-     <p id="u6197-2">22The time came for Joseph and Mary to perform the ceremony of purification, as the Law of Moses commanded. So they took the child to Jerusalem to present him to the Lord, 23 as it is written in the law of the Lord: “Every first-born male is to be dedicated to the Lord.” 24 They also went to offer a sacrifice of a pair of doves or two young pigeons, as required by the law of the Lord.</p>
-     <p id="u6197-4">25At that time there was a man named Simeon living in Jerusalem. He was a good, God-fearing man and was waiting for Israel to be saved. The Holy Spirit was with him 26and had assured him that he would not die before he had seen the Lord's promised Messiah. 27Led by the Spirit, Simeon went into the Temple. When the parents brought the child Jesus into the Temple to do for him what the Law required, 28Simeon took the child in his arms and gave thanks to God:</p>
-     <p id="u6197-6">29“Now, Lord, you have kept your promise,</p>
-     <p id="u6197-8">and you may let your servant go in peace.</p>
-     <p id="u6197-10">30With my own eyes I have seen your salvation,</p>
-     <p id="u6197-12">31which you have prepared in the presence of all peoples:</p>
-     <p id="u6197-14">32&nbsp;&nbsp; A light to reveal your will to the Gentiles</p>
-     <p id="u6197-16">and bring glory to your people Israel.”</p>
-     <p id="u6197-18">33The child's father and mother were amazed at the things Simeon said about him. 34Simeon blessed them and said to Mary, his mother, “This child is chosen by God for the destruction and the salvation of many in Israel. He will be a sign from God which many people will speak against 35and so reveal their secret thoughts. And sorrow, like a sharp sword, will break your own heart.”</p>
-     <p id="u6197-20">36-37&nbsp;&nbsp; There was a very old prophet, a widow named Anna, daughter of Phanuel of the tribe of Asher. She had been married for only seven years and was now eighty-four years old. She never left the Temple; day and night she worshiped God, fasting and praying. 38That very same hour she arrived and gave thanks to God and spoke about the child to all who were waiting for God to set Jerusalem free.</p>
-     <p id="u6197-21">&nbsp;</p>
-     <p id="u6197-22">&nbsp;</p>
-     <p id="u6197-24">Luke 2:22-38</p>
-    </div>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U6206-BP_infinity" template="last-weeks-br.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix colelem" id="u6206-4" href="https://www.bible.com/bible/68/luk.2" data-muse-uid="U6206" data-muse-type="txt_frame"><!-- content --><p><span id="u6206">View online</span></p></a>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U6205-BP_infinity" template="last-weeks-br.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix colelem" id="u6205-4" href="bible-readings.html" data-href="page:U7278" data-muse-uid="U6205" data-muse-type="txt_frame"><!-- content --><p><span id="u6205">This weeks passage</span></p></a>
-    <!-- /m_editable -->
+   <div class="clip_frame grpelem" id="u35464"><!-- svg -->
+    <img class="svg" id="u35462" src="images/pasted-svg-624x232.svg?crc=4042319376" alt="" data-mu-svgfallback="images/pasted%20svg%20624x232_poster_.png?crc=102143596" data-image-width="900" data-image-height="335"/>
    </div>
-   <a class="anchor_item grpelem" id="top"></a>
-   <!-- m_editable region-id="editable-static-tag-U6196-BP_infinity" template="last-weeks-br.html" data-type="html" data-ice-options="disableImageResize,link" -->
-   <div class="clearfix grpelem" id="u6196-4" data-muse-uid="U6196" data-muse-type="txt_frame"><!-- content -->
-    <p>Last weeks passage</p>
+   <!-- m_editable region-id="editable-static-tag-U35361-BP_infinity" template="sermoncoming-soon.html" data-type="html" data-ice-options="disableImageResize,link" -->
+   <div class="Title clearfix grpelem" id="u35361-4" data-muse-uid="U35361" data-muse-type="txt_frame"><!-- content -->
+    <h1>SERMONS</h1>
    </div>
    <!-- /m_editable -->
-   <div class="clearfix grpelem" id="pu24309-4"><!-- column -->
-    <!-- m_editable region-id="editable-static-tag-U24309-BP_infinity" template="last-weeks-br.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="Title clearfix colelem" id="u24309-4" data-muse-uid="U24309" data-muse-type="txt_frame"><!-- content -->
-     <h1>Bible Readings</h1>
-    </div>
-    <!-- /m_editable -->
-    <div class="colelem" id="u6188"><!-- simple frame --></div>
-   </div>
-   <div class="verticalspacer" data-offset-top="568" data-content-above-spacer="568" data-content-below-spacer="81"></div>
+   <div class="grpelem" id="u6188"><!-- simple frame --></div>
+   <div class="verticalspacer" data-offset-top="424" data-content-above-spacer="423" data-content-below-spacer="81"></div>
    <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
