--- a/start-ol.html
+++ b/start-ol.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "start-ol.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "start-ol.css"], "outOfDate":[]};
 </script>
   
   <title>Start OL</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
   <link rel="stylesheet" type="text/css" href="css/master_master-blank.css?crc=3941640446"/>
-  <link rel="stylesheet" type="text/css" href="css/start-ol.css?crc=4061224029" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/start-ol.css?crc=4144277139" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/znal_KKW3BvPsg1PgKLet4Dl4wit0t72LHvLRBxrC6IfeCtgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MKGHfFEzMsMMeMX6MqGIQWmDZZMgGEhV369.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/xAHDQ9LF1yBd2lEFAoRGPz3xYu7amf3FHCenh5kicCtfeCtgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MKGHfFEzMsMMeMX6MqGIQWmDZZMghiEQ369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -58,7 +58,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <a class="nonblock nontext clearfix grpelem" id="u33264-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u33264-2">READINGS</p></a>
        <div class="clearfix grpelem" id="pu33256-4"><!-- column -->
-        <a class="nonblock nontext clearfix colelem" id="u33256-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u33256-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u33256-4" href="sermoncoming-soon.html" data-href="page:U35374"><!-- content --><p id="u33256-2">SERMONS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u33255-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u33255-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem" id="u33267-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u33267-2">EVENTS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u33266-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u33266-2">OPENLIFE</p></a>
@@ -75,11 +75,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- m_editable region-id="editable-static-tag-U33682-BP_infinity" template="start-ol.html" data-type="html" data-ice-options="disableImageResize,link" -->
     <div class="clearfix colelem" id="u33682-18" data-muse-uid="U33682" data-muse-type="txt_frame"><!-- content -->
      <p id="u33682-2">Core Vision</p>
-     <p id="u33682-4">- A group focused on equipping Gods people to a live a Gospel centred life together -</p>
-     <p id="u33682-6">- Team of 2 committed leaders and 4 committed group members -</p>
-     <p id="u33682-8">- Team leaders need to worship regularly at established church -</p>
-     <p id="u33682-10">- Groups to meet weekly with seasonal breaks if needed -</p>
-     <p id="u33682-13"><span id="u33682-11">- Mission</span>: Heal, Equip, Release and Celebrate -</p>
+     <p id="u33682-4">A group focused on equipping Gods people to a live a Gospel centred life together</p>
+     <p id="u33682-6">Team of 2 committed leaders and 4 committed group members</p>
+     <p id="u33682-8">Team leaders need to worship regularly at established church</p>
+     <p id="u33682-10">Groups to meet weekly with seasonal breaks if needed</p>
+     <p id="u33682-13"><span id="u33682-11">Mission</span>: Heal, Equip, Release and Celebrate</p>
      <p id="u33682-14">&nbsp;</p>
      <p id="u33682-16">Phases have been implemented into this group to ensure that it is truly God’s will for a certain Open Life group to go ahead and/or continue. Each phase is designed to test if God is working amongst the group. If a group does not meet the expectations of each phase it will go under review which is explained below. There will be grace used in the case of a review.</p>
     </div>
@@ -93,7 +93,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U33964-BP_infinity" template="start-ol.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u33964-4" href="bible-questions.html" data-href="page:U18781" data-muse-uid="U33964" data-muse-type="txt_frame"><!-- content --><p id="u33964-2"><span id="u33964">Phase 2</span></p></a>
+    <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u33964-4" href="going-deeper.html" data-href="page:U18781" data-muse-uid="U33964" data-muse-type="txt_frame"><!-- content --><p id="u33964-2"><span id="u33964">Phase 2</span></p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U33967-BP_infinity" template="start-ol.html" data-type="html" data-ice-options="disableImageResize,link" -->
     <div class="clearfix colelem" id="u33967-4" data-muse-uid="U33967" data-muse-type="txt_frame"><!-- content -->
