--- a/d.html
+++ b/d.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>D</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_abcd-master.css?crc=4242659416"/>
-  <link rel="stylesheet" type="text/css" href="css/d.css?crc=390103256" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_abcd-master.css?crc=4239640769"/>
+  <link rel="stylesheet" type="text/css" href="css/d.css?crc=3829722956" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_abcd-master.css?crc=3824530138"/>
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/xDUCOkhMKHlZyUn6REiEY_kKAdIoFQfnNTF0WadjkR3feCtgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfF7zMsMMeMt6MKGHfFczMsMMeMb6MqGIQWmDZZMg3HRr3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/VN-z5m-TOmk3lhXy_WvHrCBT0x4qpBp70uhkOijjkWtfeCtgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfF7zMsMMeMt6MKGHfFczMsMMeMb6MqGIQWmDZZMgXlEQ369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -63,7 +63,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
         <a class="nonblock nontext clearfix grpelem shared_content" id="u29699-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u29699-4_content"><!-- content --><p id="u29699-2">READINGS</p></a>
         <div class="clearfix grpelem shared_content" id="pu29694-4" data-content-guid="pu29694-4_content"><!-- column -->
-         <a class="nonblock nontext clearfix colelem" id="u29694-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u29694-2">SERMONS</p></a>
+         <a class="nonblock nontext clearfix colelem" id="u29694-4" href="sermoncoming-soon.html" data-href="page:U35374"><!-- content --><p id="u29694-2">SERMONS</p></a>
          <a class="nonblock nontext clearfix colelem" id="u29692-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u29692-2">DISCIPLESHIP</p></a>
          <a class="nonblock nontext clearfix colelem" id="u29703-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u29703-2">EVENTS</p></a>
          <a class="nonblock nontext clearfix colelem" id="u29700-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u29700-2">OPENLIFE</p></a>
