--- a/going-deeper.html
+++ b/going-deeper.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "bible-questions.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "going-deeper.css"], "outOfDate":[]};
 </script>
   
-  <title>Bible Questions</title>
+  <title>Going Deeper</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=368304127"/>
-  <link rel="stylesheet" type="text/css" href="css/bible-questions.css?crc=397584217" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4108129033"/>
+  <link rel="stylesheet" type="text/css" href="css/going-deeper.css?crc=449091192" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/EkLNo7EdeuQVRRefbl5XR2zzZtdKRDvSWyx0KvIqvVtfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMg7ERr3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/6aAExx3idHlH22qAjPBJo2sPBOp-ayVVg06PHh_nJtCfeCtgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MKGHfFEzMsMMeMX6MqGIQWmDZZMgCiEQ369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -58,7 +58,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <a class="nonblock nontext clearfix grpelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
        <div class="clearfix grpelem" id="pu22548-4"><!-- column -->
-        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermoncoming-soon.html" data-href="page:U35374"><!-- content --><p id="u22548-2">SERMONS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
@@ -71,15 +71,32 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
+   <!-- m_editable region-id="editable-static-tag-U35050-BP_infinity" template="going-deeper.html" data-type="html" data-ice-options="disableImageResize,link" -->
+   <div class="clearfix grpelem" id="u35050-27" data-muse-uid="U35050" data-muse-type="txt_frame"><!-- content -->
+    <p><span id="u35050">Read</span></p>
+    <p>Read a Scripture passage.</p>
+    <p id="u35050-6">Ask someone to repeat the passage in their own words. When they are done, ask the group if the person left anything important out of the story.</p>
+    <p id="u35050-7">&nbsp;</p>
+    <p><span id="u35050-8">Ask</span></p>
+    <p>What does this story tell us about God?</p>
+    <p id="u35050-13">What does this story tell us about humankind?</p>
+    <p>What does this story tell us about God’s plan?</p>
+    <p id="u35050-17">Give them time to answer. Resist the urge to tell them what the story means. If they aren’t getting it, read additional passages of Scripture or ask more questions.</p>
+    <p id="u35050-19">If this story is true, how does that change how we act? If lived out how will it change the world?</p>
+    <p>What questions do you have about this story?</p>
+    <p id="u35050-23">Do you know anyone who needs to hear this story?</p>
+    <p id="u35050-25">Encourage them share the story with anyone they name.</p>
+   </div>
+   <!-- /m_editable -->
    <div class="clearfix grpelem" id="pu18764-4"><!-- column -->
-    <!-- m_editable region-id="editable-static-tag-U18764-BP_infinity" template="bible-questions.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <!-- m_editable region-id="editable-static-tag-U18764-BP_infinity" template="going-deeper.html" data-type="html" data-ice-options="disableImageResize,link" -->
     <div class="Title clearfix colelem" id="u18764-4" data-muse-uid="U18764" data-muse-type="txt_frame"><!-- content -->
-     <h1>BIBLE QUESTIONS</h1>
+     <h1>GOING DEEPER</h1>
     </div>
     <!-- /m_editable -->
     <div class="colelem" id="u6188"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="77" data-content-above-spacer="88" data-content-below-spacer="81"></div>
+   <div class="verticalspacer" data-offset-top="308" data-content-above-spacer="308" data-content-below-spacer="81"></div>
    <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
