--- a/openlife.html
+++ b/openlife.html
@@ -11,13 +11,13 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "openlife.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "openlife.css"], "outOfDate":[]};
 </script>
   
   <title>OpenLife</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4200611759"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4108129033"/>
   <link rel="stylesheet" type="text/css" href="css/openlife.css?crc=389403474" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/uog2FrmJ6MJjQaBPFCYZZhFAsqo-mW5Ec5PtNO5tFL3feCtgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfFczMsMMeMb6MKGHfFEzMsMMeMX6MqGIQWmDZZMg1EhV369.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/-DhHUMq9eDypdRPacjf5Tkh9_pHYLXyBbA3foGfF1FIfeCtgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfFczMsMMeMb6MKGHfFEzMsMMeMX6MqGIQWmDZZMgTiEQ369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -52,13 +52,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
       <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
        <div class="clearfix grpelem" id="pu20416-3"><!-- column -->
-        <a class="nonblock nontext museBGSize clearfix colelem" id="u20416-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u20416-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
         <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u20415" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
        </div>
        <a class="nonblock nontext clearfix grpelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
        <div class="clearfix grpelem" id="pu22548-4"><!-- column -->
-        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermoncoming-soon.html" data-href="page:U35374"><!-- content --><p id="u22548-2">SERMONS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
         <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
@@ -87,7 +87,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="clearfix colelem" id="u32870"><!-- column -->
      <!-- m_editable region-id="editable-static-tag-U32389-BP_infinity" template="openlife.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u32389-4" href="bible-questions.html" data-href="page:U18781" data-muse-uid="U32389" data-muse-type="txt_frame"><!-- content --><p id="u32389-2"><span id="u32389">OpenLife Groups</span></p></a>
+     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u32389-4" href="going-deeper.html" data-href="page:U18781" data-muse-uid="U32389" data-muse-type="txt_frame"><!-- content --><p id="u32389-2"><span id="u32389">OpenLife Groups</span></p></a>
      <!-- /m_editable -->
      <div class="clearfix colelem" id="pu32398-8"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U32398-BP_infinity" template="openlife.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
@@ -118,13 +118,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pu5666-4"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U5666-BP_infinity" template="openlife.html" data-type="html" data-ice-options="disableImageResize,link" -->
     <div class="Title clearfix colelem" id="u5666-4" data-muse-uid="U5666" data-muse-type="txt_frame"><!-- content -->
-     <h1>OpenLife Groups</h1>
+     <h1>OpenLife GROUPS</h1>
     </div>
     <!-- /m_editable -->
     <div class="colelem" id="u6188"><!-- simple frame --></div>
    </div>
    <div class="verticalspacer" data-offset-top="530" data-content-above-spacer="530" data-content-below-spacer="81"></div>
-   <a class="nonblock nontext rounded-corners clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
+   <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -132,7 +132,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 16);return 0},g=function(g){for(var f=document.getElementsByTagName("link"),h=0;h<f.length;h++)if("text/css"==f[h].type){var i=(f[h].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!i||!i[1]||!i[2])break;b[i[1]]=i[2]}f=document.createElement("div");f.className="version";f.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(f);for(h=0;h<Muse.assets.required.length;){var i=Muse.assets.required[h],l=i.match(/([\w\-\.]+)\.(\w+)$/),k=l&&l[1]?
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
