--- a/sermon.html
+++ b/sermon.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Sermon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=368304127"/>
-  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=259665147" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4108129033"/>
+  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=368399172" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/LA23xKWFbu8-KoNCMSa2IxtEE9Vp-kiXhVV8eC3BPibfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgc7Rr3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/c1K6T2UB2WFreP4cTt4AbuP8ekaXJ7RCYP9tEYM8PU6fenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgcFEQ369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -58,7 +58,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <a class="nonblock nontext clearfix grpelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
        <div class="clearfix grpelem" id="pu22548-4"><!-- column -->
-        <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermoncoming-soon.html" data-href="page:U35374"><!-- content --><p id="u22548-2">SERMONS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
@@ -93,7 +93,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pu5427-4"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U5427-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
     <div class="Title clearfix colelem" id="u5427-4" data-muse-uid="U5427" data-muse-type="txt_frame"><!-- content -->
-     <h1>Sermons</h1>
+     <h1>SERMONS</h1>
     </div>
     <!-- /m_editable -->
     <div class="clearfix colelem" id="u16695"><!-- group -->
